[package]
name = "http-api-utils"
version = "0.3.1"
edition = "2021"

[features]
default = ["error_enum", "tokens", "tagged_tokens"]
error_enum = []
tokens = []
tagged_tokens = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true }
serde_json = "1"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json", "tls"]

