[package]
name = "http-api-utils"
version = "0.6.0"
edition = "2021"

[features]
default = ["error_enum", "tokens", "tagged_tokens"]
error_enum = []
tokens = []
tagged_tokens = ["dep:serde", "dep:serde_json"]
jwt = ["dep:biscuit", "dep:reqwest", "dep:http", "dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

biscuit = { version = "0.7", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
http = { version = "1", optional = true }

[dependencies.rocket]
version = "0.5.1"
features = ["json", "tls"]
